src/test/deca/syntax/valid/custom/print/print_cast_braces.deca
// Description:
//   Print condition with int cast.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   print((int) (4));
}
