src/test/deca/syntax/invalid/custom/object/printlnx_cast_braces.deca
// Description:
//   Print condition with int cast.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   printlnx(((int) (4));
}
